--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,8 @@ services:
     networks:
       app-network:
         ipv4_address: 11.1.1.1
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   app-mysql:
     container_name: app-mysql
